// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostActionBar with the default props renders the PostActionBar component correctly 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        null,
      ]
    }
    testID="horizontalPadding-component"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginTop": 24,
          "paddingBottom": 20,
        }
      }
      testID="postActionBar-component"
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="action-bar-like-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/thumbsUp.png",
              }
            }
            style={
              Object {
                "height": 16.67,
                "tintColor": "#5B5B5B",
                "width": 16.67,
              }
            }
            testID="like-count-image"
          />
          <Text
            style={
              Object {
                "color": "#5B5B5B",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="like-count-text"
          >
            0 likes
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="post-comment-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/comment.png",
              }
            }
            style={
              Object {
                "height": 14.58,
                "tintColor": "#5B5B5B",
                "width": 16.67,
              }
            }
            testID="comment-count-image"
          />
          <Text
            style={
              Object {
                "color": "#5B5B5B",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="comment-count-text"
          >
            25 comments
          </Text>
        </View>
      </View>
    </View>
  </View>
  <BVLinearGradient
    colors={
      Array [
        4294111986,
        4294967295,
      ]
    }
    endPoint={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Object {
        "height": 10,
      }
    }
  />
</View>
`;

exports[`PostActionBar with the liked prop renders the inner like count with color 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        null,
      ]
    }
    testID="horizontalPadding-component"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginTop": 24,
          "paddingBottom": 20,
        }
      }
      testID="postActionBar-component"
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="action-bar-like-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/thumbsUp.png",
              }
            }
            style={
              Object {
                "height": 16.67,
                "tintColor": "#12A3BE",
                "width": 16.67,
              }
            }
            testID="like-count-image"
          />
          <Text
            style={
              Object {
                "color": "#12A3BE",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="like-count-text"
          >
            0 likes
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="post-comment-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/comment.png",
              }
            }
            style={
              Object {
                "height": 14.58,
                "tintColor": "#5B5B5B",
                "width": 16.67,
              }
            }
            testID="comment-count-image"
          />
          <Text
            style={
              Object {
                "color": "#5B5B5B",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="comment-count-text"
          >
            25 comments
          </Text>
        </View>
      </View>
    </View>
  </View>
  <BVLinearGradient
    colors={
      Array [
        4294111986,
        4294967295,
      ]
    }
    endPoint={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Object {
        "height": 10,
      }
    }
  />
</View>
`;

exports[`PostActionBar with the numberOfLikes prop renders the inner like count with the given number of likes 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 20,
        },
        null,
      ]
    }
    testID="horizontalPadding-component"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginTop": 24,
          "paddingBottom": 20,
        }
      }
      testID="postActionBar-component"
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="action-bar-like-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/thumbsUp.png",
              }
            }
            style={
              Object {
                "height": 16.67,
                "tintColor": "#5B5B5B",
                "width": 16.67,
              }
            }
            testID="like-count-image"
          />
          <Text
            style={
              Object {
                "color": "#5B5B5B",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="like-count-text"
          >
            5 likes
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
          testID="post-comment-count"
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/icons/comment.png",
              }
            }
            style={
              Object {
                "height": 14.58,
                "tintColor": "#5B5B5B",
                "width": 16.67,
              }
            }
            testID="comment-count-image"
          />
          <Text
            style={
              Object {
                "color": "#5B5B5B",
                "fontFamily": "NotoSansJP-Bold",
                "fontSize": 13,
                "fontWeight": undefined,
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginLeft": 9.67,
              }
            }
            testID="comment-count-text"
          >
            25 comments
          </Text>
        </View>
      </View>
    </View>
  </View>
  <BVLinearGradient
    colors={
      Array [
        4294111986,
        4294967295,
      ]
    }
    endPoint={
      Object {
        "x": 1,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    style={
      Object {
        "height": 10,
      }
    }
  />
</View>
`;
